fix(index.html): align text on slider to the center on mobile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,59 +1,68 @@
 .header-style-2 #header {
-    background: transparent;
-    position: fixed;
+  background: transparent;
+  position: fixed;
 }
 
 .header-style-2 #header {
-    width: 100%;
+  width: 100%;
 }
 
 #mobile-menu {
-    margin: var(--mobile-header-height) 0 0;
+  margin: var(--mobile-header-height) 0 0;
 }
 
 #content {
-    margin-top: 0px;
-    padding-bottom: 0px;
-    height: 100vh;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  height: 100vh;
 }
 
 .main-slider,
 .main-slider__slides {
-    padding: 0;
-    height: 100%;
+  padding: 0;
+  height: 100%;
 }
 
 .main-slider__slides li {
-    padding: 0;
-    height: 100vh;
+  padding: 0;
+  height: 100vh;
 }
 
 @media (min-width: 768px) {
-    .main-slider .main-slider__slides li {
-        padding: 0;
-    }
+  .main-slider .main-slider__slides li {
+    padding: 0;
+  }
 }
 
 .main-slider-slide__content {
-    margin-top: 45%;
+  margin-top: 45%;
 }
 
 .footer-homepage {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-homepage .row {
-    margin: auto;
+  margin: auto;
 }
 
 .widget-title a {
-    color: white;
+  color: white;
 }
 
 @media (max-width: 768px) {
-    .widget {
-        margin-bottom: 16px;
-    }
+  .widget {
+    margin-bottom: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-slider-slide__content-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
